<resources>
    <string name="app_name">RamenTimer by Pa@ART</string>
    <string name="text_sec">00</string>
    <string name="text_min">00</string>
    <string name="text_fun">分</string>
    <string name="text_byou">秒</string>
    <string name="button_sec_up">▲</string>
    <string name="button_min_up">▲</string>
    <string name="button_min_down">▼</string>
    <string name="button_sec_down">▼</string>
    <string name="button_stop">ストップ</string>
    <string name="button_start">スタート</string>
    <string name="button_alarm">アラーム音</string>
    <string name="button_reset">リセット</string>
    <string name="text_alarm">アラーム名</string>
</resources>
